osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_strings/test_string_slice_validation[Result = StringSlice(s='abcdef', start=5, end=2)].txt
error: invalid `start`
--> main.sml:1:39
     |
   1 | Result = StringSlice(s="abcdef", start=5, end=2)
     |                                        ^ `start` must be less than or equal to `end`